# magic-words

./: MeetingReports.md  ProjectHome.md  ProposalForVNSoC2010.md
squeakvm/: CMakeCache.txt  Makefile  cmake_install.cmake  config.h.in  gnu-interp.c  squeak  version.c
squeakvm/ADPCMCodecPlugin/: cmake_install.cmake
squeakvm/AioPlugin/: Makefile  so.AioPlugin
squeakvm/AsynchFilePlugin/: CMakeLists.txt  Makefile  cmake_install.cmake
squeakvm/B2DPlugin/: Makefile
squeakvm/B3DAcceleratorPlugin/: Makefile  cmake_install.cmake  so.B3DAcceleratorPlugin
squeakvm/BMPReadWriterPlugin/: CMakeLists.txt  Makefile
squeakvm/ClipboardExtendedPlugin/: cmake_install.cmake  so.ClipboardExtendedPlugin
squeakvm/CroquetPlugin/: CMakeLists.txt
squeakvm/DBusPlugin/: Makefile  so.DBusPlugin
squeakvm/DSAPrims/: CMakeLists.txt
squeakvm/DropPlugin/: CMakeLists.txt  Makefile  cmake_install.cmake
squeakvm/FT2Plugin/: CMakeLists.txt  Makefile
squeakvm/FileCopyPlugin/: cmake_install.cmake
squeakvm/FilePlugin/: CMakeLists.txt
squeakvm/FloatArrayPlugin/: Makefile  cmake_install.cmake
squeakvm/FloatMathPlugin/: Makefile  cmake_install.cmake
squeakvm/GStreamerPlugin/: Makefile  cmake_install.cmake  so.GStreamerPlugin
squeakvm/GeniePlugin/: CMakeLists.txt  Makefile  cmake_install.cmake
squeakvm/HostWindowPlugin/: cmake_install.cmake
squeakvm/ImmX11Plugin/: CMakeLists.txt  cmake_install.cmake
squeakvm/JPEGReadWriter2Plugin/: Makefile  cmake_install.cmake
squeakvm/JPEGReaderPlugin/: CMakeLists.txt  Makefile
squeakvm/JoystickTabletPlugin/: cmake_install.cmake
squeakvm/KedamaPlugin/: CMakeLists.txt  cmake_install.cmake
squeakvm/KedamaPlugin2/: cmake_install.cmake  so.KedamaPlugin2
squeakvm/Klatt/: cmake_install.cmake
squeakvm/MIDIPlugin/: cmake_install.cmake  so.MIDIPlugin
squeakvm/Matrix2x3Plugin/: CMakeLists.txt
squeakvm/MiscPrimitivePlugin/: CMakeLists.txt  Makefile  cmake_install.cmake
squeakvm/Mpeg3Plugin/: so.Mpeg3Plugin
squeakvm/OggPlugin/: cmake_install.cmake
squeakvm/PseudoTTYPlugin/: Makefile  cmake_install.cmake
squeakvm/RomePlugin/: CMakeLists.txt  cmake_install.cmake  so.RomePlugin
squeakvm/SecurityPlugin/: CMakeLists.txt  cmake_install.cmake
squeakvm/SerialPlugin/: cmake_install.cmake
squeakvm/SocketPlugin/: cmake_install.cmake
squeakvm/SoundGenerationPlugin/: Makefile
squeakvm/Squeak3D/: Makefile  cmake_install.cmake
squeakvm/SqueakFFIPrims/: CMakeLists.txt  Makefile  so.SqueakFFIPrims
squeakvm/StarSqueakPlugin/: cmake_install.cmake
squeakvm/SurfacePlugin/: CMakeLists.txt  Makefile
squeakvm/UUIDPlugin/: CMakeLists.txt  cmake_install.cmake
squeakvm/UnixOSProcessPlugin/: CMakeLists.txt
squeakvm/XDisplayControlPlugin/: Makefile  cmake_install.cmake
squeakvm/ZipPlugin/: cmake_install.cmake
squeakvm/vm-display-X11/: Makefile  so.vm-display-X11
squeakvm/vm-display-custom/: CMakeLists.txt  Makefile  so.vm-display-custom
squeakvm/vm-display-fbdev/: CMakeLists.txt  Makefile  so.vm-display-fbdev
squeakvm/vm-sound-ALSA/: cmake_install.cmake  so.vm-sound-ALSA
squeakvm/vm-sound-NAS/: CMakeLists.txt
squeakvm/vm-sound-OSS/: Makefile  cmake_install.cmake  so.vm-sound-OSS
squeakvm/vm-sound-custom/: CMakeLists.txt  Makefile  so.vm-sound-custom
squeakvm/vm-sound-null/: Makefile  cmake_install.cmake
squeakvm/vm-sound-pulse/: so.vm-sound-pulse
trunk/: MagicWords-yhm.47.mcz
trunk/squeakvm/: config  config.h  config.status  squeakvm
trunk/squeakvm/ADPCMCodecPlugin/: CMakeLists.txt  Makefile
trunk/squeakvm/AioPlugin/: CMakeLists.txt  cmake_install.cmake
trunk/squeakvm/B2DPlugin/: CMakeLists.txt  cmake_install.cmake
trunk/squeakvm/B3DAcceleratorPlugin/: CMakeLists.in  CMakeLists.txt
trunk/squeakvm/BMPReadWriterPlugin/: cmake_install.cmake
trunk/squeakvm/BitBltPlugin/: CMakeLists.txt  Makefile  cmake_install.cmake
trunk/squeakvm/ClipboardExtendedPlugin/: CMakeLists.txt  Makefile
trunk/squeakvm/CroquetPlugin/: Makefile  cmake_install.cmake
trunk/squeakvm/DBusPlugin/: CMakeLists.txt  cmake_install.cmake
trunk/squeakvm/DSAPrims/: Makefile  cmake_install.cmake
trunk/squeakvm/FFTPlugin/: CMakeLists.txt  Makefile  cmake_install.cmake
trunk/squeakvm/FT2Plugin/: cmake_install.cmake  so.FT2Plugin
trunk/squeakvm/FileCopyPlugin/: CMakeLists.txt  Makefile  so.FileCopyPlugin
trunk/squeakvm/FilePlugin/: Makefile  cmake_install.cmake
trunk/squeakvm/FloatArrayPlugin/: CMakeLists.txt
trunk/squeakvm/FloatMathPlugin/: CMakeLists.txt
trunk/squeakvm/GStreamerPlugin/: CMakeLists.txt
trunk/squeakvm/HostWindowPlugin/: CMakeLists.txt  Makefile  so.HostWindowPlugin
trunk/squeakvm/ImmX11Plugin/: Makefile  so.ImmX11Plugin
trunk/squeakvm/JPEGReadWriter2Plugin/: CMakeLists.txt
trunk/squeakvm/JPEGReaderPlugin/: cmake_install.cmake
trunk/squeakvm/JoystickTabletPlugin/: CMakeLists.txt  Makefile
trunk/squeakvm/KedamaPlugin/: Makefile  so.KedamaPlugin
trunk/squeakvm/KedamaPlugin2/: CMakeLists.txt  Makefile
trunk/squeakvm/Klatt/: CMakeLists.txt  Makefile
trunk/squeakvm/LargeIntegers/: CMakeLists.txt  Makefile  cmake_install.cmake
trunk/squeakvm/LocalePlugin/: CMakeLists.txt  Makefile  cmake_install.cmake
trunk/squeakvm/MIDIPlugin/: CMakeLists.txt  Makefile
trunk/squeakvm/Matrix2x3Plugin/: Makefile  cmake_install.cmake
trunk/squeakvm/Mpeg3Plugin/: CMakeLists.txt  Makefile  cmake_install.cmake
trunk/squeakvm/OggPlugin/: CMakeLists.txt  Makefile  so.OggPlugin
trunk/squeakvm/PseudoTTYPlugin/: CMakeLists.txt  so.PseudoTTYPlugin
trunk/squeakvm/RePlugin/: CMakeLists.txt  Makefile  cmake_install.cmake
trunk/squeakvm/RomePlugin/: Makefile
trunk/squeakvm/SecurityPlugin/: Makefile
trunk/squeakvm/SerialPlugin/: CMakeLists.txt  Makefile
trunk/squeakvm/SocketPlugin/: CMakeLists.txt  Makefile
trunk/squeakvm/SoundCodecPrims/: CMakeLists.txt  Makefile  cmake_install.cmake
trunk/squeakvm/SoundGenerationPlugin/: CMakeLists.txt  cmake_install.cmake
trunk/squeakvm/SoundPlugin/: CMakeLists.txt  Makefile  cmake_install.cmake
wiki/: MeetingReports.wiki  ProposalForVNSoC2010.wiki
(+34 files in other folders)
